@@ -3,9 +3,8 @@ package org.ruoyi.service.knowledge.impl.loader;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import org.apache.poi.xwpf.usermodel.XWPFDocument;
-import org.ruoyi.factory.ChatServiceFactory;
-import org.ruoyi.service.chat.AbstractChatService;
+import org.apache.poi.xwpf.usermodel.*;
+import org.ruoyi.common.core.utils.SpringUtils;
 import org.ruoyi.service.chat.impl.provider.ProviderImageDescriber;
 import org.ruoyi.service.knowledge.ResourceLoader;
 import org.ruoyi.service.knowledge.TextSplitter;
@@ -13,13 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.io.InputStream;
-import org.apache.poi.xwpf.usermodel.IBodyElement;
-import org.apache.poi.xwpf.usermodel.XWPFParagraph;
-import org.apache.poi.xwpf.usermodel.XWPFPictureData;
-import org.apache.poi.xwpf.usermodel.XWPFRun;
-import org.apache.poi.xwpf.usermodel.XWPFTable;
-import org.apache.poi.xwpf.usermodel.XWPFTableCell;
-import org.apache.poi.xwpf.usermodel.XWPFTableRow;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -30,16 +22,7 @@ import java.util.List;
 @Slf4j
 public class WordLoader implements ResourceLoader {
     private final TextSplitter textSplitter;
-    private final ChatServiceFactory chatServiceFactory;
-
-    private ProviderImageDescriber getImageDescriber() {
-        AbstractChatService service = chatServiceFactory.getOriginalService("multimodal");
-        if (service instanceof ProviderImageDescriber describer) {
-            return describer;
-        }
-        return null;
-    }
-
+    private final ProviderImageDescriber describer = SpringUtils.getBean(ProviderImageDescriber.class);
 
     @Override
     public String getContent(InputStream inputStream) {
@@ -60,7 +43,7 @@ public class WordLoader implements ResourceLoader {
             throw new RuntimeException("Word文档解析失败", e);
         }
     }
-    
+
     /**
      * 段落解析，识别标题层级和内嵌图片
      */
@@ -75,19 +58,22 @@ public class WordLoader implements ResourceLoader {
         boolean hasImage = false;
 
         for (XWPFRun run : runs) {
-            List<XWPFPictureData> pictures = run.getEmbeddedPictures();
+            List<XWPFPicture> pictures = run.getEmbeddedPictures();
             if (pictures != null && !pictures.isEmpty()) {
                 hasImage = true;
-                for (XWPFPictureData pic : pictures) {
-                    String fileName = pic.getFileName();
+                for (XWPFPicture pic : pictures) {
+                    XWPFPictureData picData = pic.getPictureData();
+                    // 防御性检查，防止空指针
+                    if (picData == null) continue;
+
+                    String fileName = picData.getFileName();
                     String suffix = (fileName != null && fileName.contains("."))
                         ? fileName.substring(fileName.lastIndexOf('.')) : ".png";
 
                     sb.append("![").append(fileName != null ? fileName : "图片").append("]");
 
                     try {
-                        byte[] data = pic.getData();
-                        ProviderImageDescriber describer = getImageDescriber();
+                        byte[] data = picData.getData();
                         String description = describer != null
                             ? describer.describe(data, fileName)
                             : (fileName != null ? fileName : "图片");
@@ -99,7 +85,7 @@ public class WordLoader implements ResourceLoader {
                     sb.append("\n\n");
 
                     log.debug("识别到图片: {} ({} bytes)", fileName,
-                        pic.getData() != null ? pic.getData().length : 0);
+                        picData.getData() != null ? picData.getData().length : 0);
                 }
             } else {
                 String runText = run.getText(0);
@@ -124,14 +110,14 @@ public class WordLoader implements ResourceLoader {
             int level = extractHeadingLevel(style);
             return "#".repeat(level) + " " + text + "\n\n";
         }
-        if (runs.get(0).getFontSize() != null
-            && runs.get(0).getFontSize() >= 18
-            && text.length() < 50) {
+        Double fontSize = runs.getFirst().getFontSizeAsDouble();
+        // 判断字号是否 >= 18（先判断 fontSize != null，防止空指针异常）
+        if (fontSize != null && fontSize >= 18 && text.length() < 50) {
             return "## " + text + "\n\n";
         }
         return text + "\n\n";
     }
-    
+
     /**
      * 表格解析为 Markdown 格式
      */
@@ -147,13 +133,13 @@ public class WordLoader implements ResourceLoader {
         for (XWPFTableCell cell : headerRow.getTableCells()) {
             headers.add(cell.getText().trim().replace("|", "\\|"));
         }
-    
+
         // 表头行
         sb.append("| ").append(String.join(" | ", headers)).append(" |\n");
-    
+
         // 分隔行
         sb.append("|").append("------|".repeat(headers.size())).append("\n");
-    
+
         // 数据行
         for (int i = 1; i < rows.size(); i++) {
             XWPFTableRow row = rows.get(i);
@@ -163,11 +149,11 @@ public class WordLoader implements ResourceLoader {
             }
             sb.append("| ").append(String.join(" | ", cells)).append(" |\n");
         }
-    
+
         sb.append("\n");
         return sb.toString();
     }
-    
+
     /**
      * 从样式名提取标题层级（如 "Heading2" → 2）
      */
